--- a/BaoNX/9.VMWare/Docs/1.taomayao.md
+++ b/BaoNX/9.VMWare/Docs/1.taomayao.md
@@ -15,4 +15,6 @@ Cài đặt ổ đĩa
 ![Alt text](../Images/5.PNG)
 
 Hoàn thành!
-![Alt text](../Images/6.PNG)
+![Alt text](../Images/6.PNG)  
+
+Các máy ảo còn lại cài đặt tương tự.
