--- a/BaoNX/9.VMWare/Docs/2.phanbiet3cardmang.md
+++ b/BaoNX/9.VMWare/Docs/2.phanbiet3cardmang.md
@@ -25,3 +25,6 @@
 
 + Ping từ Centos 7 sang Centos 9 bằng host-only.  
 ![Alt text](../Images/12.PNG)
+
+Tài liệu tham khảo:  
+[engisv.info](https://www.engisv.info/?p=134)
